Did more CMI writing and Gl0 stuff

--- a/works/thesis_report/bibliography.bib
+++ b/works/thesis_report/bibliography.bib
@@ -6,6 +6,21 @@
     year = "1741"
 }
 
+@article{shannon_comms,
+    author = {{Shannon, C. E.}},
+    title = "A Mathematical Theory of Communication",
+    journal = "Bell System Technical Journal",
+    year = "1948"
+}
+
+@article{gelfand,
+    author = {{I. Gel'fand and A. Yaglom,}},
+    title = "Calculation of the amount of information about a random function contained in another such function",
+    journal = "American Mathematical Society Translations vol. 2, no. 12",
+    pages = "199-247",
+    year = "1959"
+}
+
 @misc{bom,
     author = "Bureau of Meteorology",
     title = "Acorn SAT data set",
